[package]
name = "trabajo-rust"
version = "0.1.0"
edition = "2021"

# Dependencias del proyecto
[dependencies]
clap = { version = "4.5", features = ["derive"] } # Para la interfaz de línea de comandos (CLI)
serde = { version = "1.0", features = ["derive"] } # Para serializar/deserializar
serde_json = "1.0" # Para el formato JSON
chrono = { version = "0.4", features = ["serde"] } # Para manejo de fechas y horas